<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--
            app works in two languages: english and polish.
        -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/piechulski" />

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/business_name"
            android:textColor="#000000"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="ul. Pogodna 9, Wałbrzych"
            android:textColor="#000000"
            android:textSize="28sp" />

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/contact"
            android:textColor="#000000"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/MainText"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#FFFFFF"
                android:onClick="contactCall"
                android:scaleType="centerCrop"
                android:src="@drawable/call" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:text="tel: 602 127 237"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="italic|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/MainText"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#FFFFFF"
                android:onClick="contactEmail"
                android:scaleType="centerCrop"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:text="e-mail:\npiechulskimercedes@gmail.com"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

        </LinearLayout>

        <Button
            android:id="@+id/schedule"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/schedule"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- NOTE: No idea if the english translation for car parts is correct.
        I barely understand what it means in polish. Sorry. -->
        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="22sp" />

    </LinearLayout>

</ScrollView>